feat(#185) Add retry button and resume event

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -230,8 +230,13 @@
   "quantity":"Quantity",
   "quantityValidationMessage":"*The quantity must be a valid integer.",
   "reason":"Reason",
-  "requiredInformation":"*This information is required.",
   "rectangle": "Rectangle",
+  "requestErrorDefault":"A communication error has occured, please try again later.",
+  "requestTimeout": "La demande ne peut pas être terminée, veuillez réessayer plus tard",
+  "requestServer404": "Le serveur est dans l'impossibilité de trouver le URL<br />'{{url}}'.",
+  "requestServer500": "Le serveur retourne une erreur.<br />L'administrateur a été informé, veuillez donc réessayer plus tard.",
+  "requiredInformation":"*This information is required.",
+  "retry":"Retry",
   "risk":"Risk",
   "riskLevel": "Risk level",
   "roof":"Roof",
@@ -241,6 +246,7 @@
   "searchHolder":"Search...",
   "securityPerimeter":"Security perimeter",
   "sendToBack":"Send to back",
+  "serverDownMessage":"SURVI-Prévention server is not responding, a message has been sent to the support, please retry later.",
   "settings":"Settings",
   "siding":"Siding",
   "start": "Start",
