--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -231,7 +231,12 @@
   "quantityValidationMessage":"*La quantité doit être une valeur entière valide.",
   "reason":"Raison",
   "rectangle": "Rectangle",
+  "requestErrorDefault":"Une erreur de communication est survenue, veuillez réessayer plus tard",
+  "requestTimeout": "The request can not be completed, please try again later.",
+  "requestServer404": "The server is unable to find the URL.<br />'{{url}}'",
+  "requestServer500": "The server returns an error. The administrator has been notified, so please try again later.",
   "requiredInformation":"*Cette information est requise.",
+  "retry":"Réessayer",
   "risk":"Risque",
   "riskLevel": "Niveau de risque",
   "roof":"Toit",
@@ -241,6 +246,7 @@
   "searchHolder":"Recherche...",
   "securityPerimeter":"Périmètre de sécurité",
   "sendToBack":"Mettre à l'arrière",
+  "serverDownMessage":"Le serveur de SURVI-Prévention ne répond pas, un message a été envoyé au service client, veuillez réessayer plus tard.",
   "settings":"Configurations",
   "siding":"Revêtement",
   "start": "Démarrer",
