feat(#198) Fix survey translation

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,7 +1,7 @@
 {
   "anomalies":"Anomalies",
   "anomalyDelete":"Supprimer l'anomalie",
-  "anomalyDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette anomalie ?",
+  "anomalyDeleteQuestion":"Êtes-vous sûr de vouloir supprimer cette anomalie ?",
   "anomalyDetail":"Détails de l'anomalie",
   "anomalyLeaveMessage":"L'anomalie contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page des anomalies du bâtiment?",
   "absence":"Absence",
@@ -52,13 +52,13 @@
   "comment":"Commentaires",
   "commentHolder":"Entrez votre commentaire ici ",
   "complete":"Compléter",
-  "Confirmation":"Confirmation",
+  "confirmation":"Confirmation",
   "construction":"Construction",
   "contact":"Contact",
   "contacts":"Contacts",
   "contactDetail":"Détails du contact",
   "contactDeleteButton": "Supprimer le contact",
-  "contactDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce contact ?",
+  "contactDeleteQuestion":"Êtes-vous sûr de vouloir supprimer ce contact ?",
   "contactLeaveMessage":"Le contact contient des erreurs de validation et n'a pas été sauvegardé.  Voulez-vous quand même retourner à la page des contacts du bâtiment?",
   "container":"Contenant",
   "containerCapacity":"Capacité du contenant",
@@ -67,7 +67,7 @@
   "course":"Parcours",
   "courseDetail":"Détail du parcours",
   "courseDetailDeleteButton":"Supprimer le parcours",
-  "courseDetailDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce parcours ?",
+  "courseDetailDeleteQuestion":"Êtes-vous sûr de vouloir supprimer ce parcours ?",
   "courseDetailLeaveMessage":"Le parcours contient des erreurs de validation et n'a pas été sauvegardé.  Voulez-vous quand même retourner à la page précédente?",
   "courseLaneDetail":"Détails de la voie",
   "courseLaneValidationMessage":"Vous devez sélectionner une caserne avant de pouvoir ajouter une rue.",
@@ -113,11 +113,11 @@
   "finish":"Terminer",
   "fireAlarmPanel":"Panneaux d'alarme",
   "fireAlarmPanelDelete":"Supprimer ce panneau d'alarme",
-  "fireAlarmPanelDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce panneau d'alarme ?",
+  "fireAlarmPanelDeleteQuestion":"Êtes-vous sûr de vouloir supprimer ce panneau d'alarme ?",
   "fireAlarmPanelDetail":"Détails du panneau d'alarme",
   "fireAlarmPanelLeaveMessage":"Le panneau d'alarme contient des erreurs de validation et n'a pas été sauvegardé. Voulez-vous quand même retourner à la page des protections incendie du bâtiment ?",
   "fireHydrantDelete":"Suppression de borne",
-  "fireHydrantDeleteQuestion":"Êtes-vous sûre de vouloir supprimer l'association de cette borne au batîment ?",
+  "fireHydrantDeleteQuestion":"Êtes-vous sûr de vouloir supprimer l'association de cette borne au batîment ?",
   "fireHydrantDetail":"Détails de la borne",
   "fireHydrantGeoPositionHolder":"Cliquer sur la carte pour localiser...",
   "fireHydrantLeaveMessage":"La borne incendie contient des erreurs de validation et n'a pas été sauvegardée. Voulez-vous quand même retourner à la liste des bornes de la ville ?",
@@ -127,7 +127,7 @@
   "fireSafety":"Protection incendie",
   "fireSprinkler":"Gicleurs incendie",
   "fireSprinklerDelete":"Supprimer le gicleur",
-  "fireSprinklerDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce gicleur ?",
+  "fireSprinklerDeleteQuestion":"Êtes-vous sûr de vouloir supprimer ce gicleur ?",
   "fireSrinklerDetail":"Détails du gicleur incendie",
   "fireSprinklerLeaveMessage":"Le gicleur contient des erreurs de validation et n'a pas été sauvegardé. Voulez-vous quand même retourner à la page des protections incendie du bâtiment ?",
   "fireStation":"Caserne",
@@ -143,7 +143,7 @@
   "group": "Grouper",
   "hazardousMaterial":"Hazardous materials",
   "hazardousMaterialDelete":"Supprimer cette matière...",
-  "hazardousMaterialDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette matière dangereuse ?",
+  "hazardousMaterialDeleteQuestion":"Êtes-vous sûr de vouloir supprimer cette matière dangereuse ?",
   "hazardousMaterialDetail":"Détails de la matière dangereuse",
   "hazardousMaterialLeaveMessage":"La matière contient des erreurs de validation et n'a pas été sauvegardée. Voulez-vous quand même retourner à la page des matières dangereuses du bâtiment ?",
   "height":"Hauteur",
@@ -165,7 +165,7 @@
   "inspectionVisit":"Visite d'inspection",
   "lane":"Voie",
   "laneDeleteButton":"Supprimer la voie",
-  "laneDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette voie ?",
+  "laneDeleteQuestion":"Êtes-vous sûr de vouloir supprimer cette voie ?",
   "laneLeaveMessage":"La voie contient des erreurs de validation et n'a pas été sauvegardée.  Voulez-vous quand même retourner à la page précédente ?",
   "laneRequired":"*La voie est requise.",
   "lastNameRequired":"Le nom est requis.",
@@ -209,12 +209,12 @@
   "particularRiskFloor":"Plancher",
   "password":"Mot de passe",
   "phone":"Téléphone",
-  "photoDeleteQuestion":"Êtes-vous sûre de vouloir supprimer cette photo ?",
+  "photoDeleteQuestion":"Êtes-vous sûr de vouloir supprimer cette photo ?",
   "pipingLocation":"Emplacement canalisation",
   "pnaps":"PNAPS",
   "pnapDayResident":"Résident de jour",
   "pnapDeleteButton":"Supprimer le PNAP",
-  "pnapDeleteQuestion":"Êtes-vous sûre de vouloir supprimer ce PNAP ?",
+  "pnapDeleteQuestion":"Êtes-vous sûr de vouloir supprimer ce PNAP ?",
   "pnapDetail":"Détails du PNAP",
   "pnapEveningResident":"Résident de soir",
   "pnapLeaveMessage":"Le PNAP contient des erreurs de validation et n'a pas été sauvegardée. Voulez-vous quand même retourner à la liste des PNAPS du batîment ?",
@@ -255,7 +255,7 @@
   "survey":"Questionnaire",
   "surveyChangingAnswerQuestion":"Cette modification réinitialisera le reste du questionnaire, voulez-vous continuer ?",
   "surveyCompletedMessage":"Le questionnaire est complété, redirection vers le résumé du questionnaire.",
-  "surveyDeleteQuestionGroup":"Êtes-vous sûre de vouloir supprimer ce groupe de question ?",
+  "surveyDeleteQuestionGroup":"Êtes-vous sûr de vouloir supprimer ce groupe de question ?",
   "surveyNextQuestion":"Suivante",
   "surveyPreviousQuestion":"Précédente",
   "surveyRequired":"Veuillez remplir le questionnaire pour compléter l'inpection.",
