--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -232,9 +232,9 @@
   "reason":"Reason",
   "rectangle": "Rectangle",
   "requestErrorDefault":"A communication error has occured, please try again later.",
-  "requestTimeout": "La demande ne peut pas être terminée, veuillez réessayer plus tard",
-  "requestServer404": "Le serveur est dans l'impossibilité de trouver le URL<br />'{{url}}'.",
-  "requestServer500": "Le serveur retourne une erreur.<br />L'administrateur a été informé, veuillez donc réessayer plus tard.",
+  "requestTimeout": "The request can not be completed, please try again later.",
+  "requestServer404": "The server is unable to find the URL.<br />'{{url}}'",
+  "requestServer500": "The server returns an error. The administrator has been notified, so please try again later.",
   "requiredInformation":"*This information is required.",
   "retry":"Retry",
   "risk":"Risk",
