Fix(#228) Fix grammar and missing translation.

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -19,7 +19,7 @@
   "addThemeButton":"Ajouter un nouveau thème...",
   "affectation":"Affectation",
   "approximate":"Approximatif",
-  "backToBuildingList":"Retourner à la liste des batîments",
+  "backToBuildingList":"Retourner à la liste des bâtiments",
   "biometric": {
     "activate": "Activation de la biométrie",
     "use": "Utilisez la biométrie",
@@ -29,15 +29,15 @@
     "rememberIfSomeoneSaveIsFingerprint": "N'oubliez pas que si quelqu'un a enregistré ses informations biométriques sur cet appareil, il aura accès à votre compte."
   },
   "bringToFront":"Mettre à l'avant",
-  "building":"Batîment",
-  "buildingAnomalies":"Anomalies du batîment",
-  "buildingContact": "Contacts du batîment",
-  "buildingDetail":"Détails du batîment",
-  "buildingHazardousMaterial":"Matières dangereuses du batîment",
-  "buildingLeaveMessage":"Le détail du batîments contient des erreurs de validation et n'a pas été sauvegardé. Voulez-vous quand même retourner à la page précédente?",
-  "buildingList":"Liste des batîments",
-  "buildingPnaps":"PNAPS du batîment",
-  "buildings":"Batîments",
+  "building":"Bâtiment",
+  "buildingAnomalies":"Anomalies du bâtiment",
+  "buildingContact": "Contacts du bâtiment",
+  "buildingDetail":"Détails du bâtiment",
+  "buildingHazardousMaterial":"Matières dangereuses du bâtiment",
+  "buildingLeaveMessage":"Le détail du bâtiment contient des erreurs de validation et n'a pas été sauvegardé. Voulez-vous quand même retourner à la page précédente?",
+  "buildingList":"Liste des bâtiments",
+  "buildingPnaps":"PNAPS du bâtiment",
+  "buildings":"Bâtiments",
   "cancel":"Annuler",
   "capacity":"Capacité",
   "cartographyLocation":"Positionnement cartographique",
@@ -105,9 +105,9 @@
     "Text":"Emplacement approximatif"
   },
   "enumGarageType": {
-    "No": "No",
-    "Yes": "Yes",
-    "Detached": "Detached"
+    "No": "Non",
+    "Yes": "Oui",
+    "Detached": "Detaché"
   },
   "extension":"Extension",
   "finish":"Terminer",
@@ -117,7 +117,7 @@
   "fireAlarmPanelDetail":"Détails du panneau d'alarme",
   "fireAlarmPanelLeaveMessage":"Le panneau d'alarme contient des erreurs de validation et n'a pas été sauvegardé. Voulez-vous quand même retourner à la page des protections incendie du bâtiment ?",
   "fireHydrantDelete":"Suppression de borne",
-  "fireHydrantDeleteQuestion":"Êtes-vous sûr de vouloir supprimer l'association de cette borne au batîment ?",
+  "fireHydrantDeleteQuestion":"Êtes-vous sûr de vouloir supprimer l'association de cette borne au bâtiment ?",
   "fireHydrantDetail":"Détails de la borne",
   "fireHydrantGeoPositionHolder":"Cliquer sur la carte pour localiser...",
   "fireHydrantLeaveMessage":"La borne incendie contient des erreurs de validation et n'a pas été sauvegardée. Voulez-vous quand même retourner à la liste des bornes de la ville ?",
@@ -217,7 +217,7 @@
   "pnapDeleteQuestion":"Êtes-vous sûr de vouloir supprimer ce PNAP ?",
   "pnapDetail":"Détails du PNAP",
   "pnapEveningResident":"Résident de soir",
-  "pnapLeaveMessage":"Le PNAP contient des erreurs de validation et n'a pas été sauvegardée. Voulez-vous quand même retourner à la liste des PNAPS du batîment ?",
+  "pnapLeaveMessage":"Le PNAP contient des erreurs de validation et n'a pas été sauvegardée. Voulez-vous quand même retourner à la liste des PNAPS du bâtiment ?",
   "pnapNightResident":"Résident de nuit",
   "pnapNumber":"Nombre",
   "pnapNumberValidationMessage":"*Le nombre doit être une valeur entière valide.",
