Fix(#230) Incorrect translation.

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -142,7 +142,7 @@
   "gasInlet":"Entrée de gaz",
   "generalInformation":"Infos générales",
   "group": "Grouper",
-  "hazardousMaterial":"Hazardous materials",
+  "hazardousMaterial":"Matières dangereuses",
   "hazardousMaterialDelete":"Supprimer cette matière...",
   "hazardousMaterialDeleteQuestion":"Êtes-vous sûr de vouloir supprimer cette matière dangereuse ?",
   "hazardousMaterialDetail":"Détails de la matière dangereuse",
