feat(#233) Allow to modify a completed survey

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -256,6 +256,9 @@
   "surveyChangingAnswerQuestion":"Cette modification réinitialisera le reste du questionnaire, voulez-vous continuer ?",
   "surveyCompletedMessage":"Le questionnaire est complété, redirection vers le résumé du questionnaire.",
   "surveyDeleteQuestionGroup":"Êtes-vous sûr de vouloir supprimer ce groupe de question ?",
+  "surveyEditionQuestion":"Êtes-vous sûr de vouloir modifier le questionnaire ?",
+  "surveyEditionRedirectionMessage":"Redirection vers le questionnaire",
+  "surveyEditButton":"Modifier le questionnaire",
   "surveyNextQuestion":"Suivante",
   "surveyPreviousQuestion":"Précédente",
   "surveyRequired":"Veuillez remplir le questionnaire pour compléter l'inpection.",
