feat(#233) Allow to modify a completed survey

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -257,6 +257,9 @@
   "surveyChangingAnswerQuestion":"This change will reset the rest of the survey, do you want to continue?",
   "surveyCompletedMessage":"The survey is completed, redirecting to the survey summary.",
   "surveyDeleteQuestionGroup":"Do you really want to delete this question group?",
+  "surveyEditionQuestion":"Do you really want to modify the survey ?",
+  "surveyEditionRedirectionMessage":"Redirecting to the survey",
+  "surveyEditButton":"Modify survey",
   "surveyNextQuestion":"Next",
   "surveyPreviousQuestion":"Previous",
   "surveyRequired":"Please answer the survey to complete inspection.",
