Fix(#236) Undetermined garage doesnt get selected correctly initially.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -107,6 +107,11 @@
     "Yes": "Yes",
     "Detached": "Detached"
   },
+  "enumTankType": {
+    "Undetermined": "Undetermined",
+    "Underground": "Underground",
+    "Aboveground": "Aboveground"
+  },
   "editPicture": "Edit picture",
   "edition":"Edition",
   "extension":"Extension",
