--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -110,6 +110,11 @@
     "Yes": "Oui",
     "Detached": "Detaché"
   },
+  "enumTankType": {
+    "Undetermined": "Indéterminé",
+    "Underground": "Sous-terre",
+    "Aboveground": "Hors-terre"
+  },
   "extension":"Extension",
   "finish":"Terminer",
   "fireAlarmPanel":"Panneaux d'alarme",
