Fix(#263) Missing translation for the back button and for the fire hydrant search bar.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -189,6 +189,8 @@
   "measurement":"Measurement",
   "measuringUnitRequired":"*The measuring unit is required.",
   "name":"Name",
+  "navigationBack":"Back",
+  "navigationSearch":"Search",
   "new":"New...",
   "no":"No",
   "notes":"Notes",
