--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -169,6 +169,7 @@
   "inspectionStatusTodo":"Pending inspection",
   "inspectionStatusWaitingForApprobation":"Waiting for inspection approval",
   "inspectionVisit":"Inspection visit",
+  "invalidDecimalValue": "The value must be a valid decimal value (ex.: 9999.99).",
   "lane":"Lane",
   "laneDeleteButton":"Delete the lane",
   "laneDeleteQuestion":"Do you really want to delete this lane?",
