feat(#283) Add size validation on sending picture to server

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -155,6 +155,7 @@
   "height":"Height",
   "heightValidationMessage":"*Height must be a valid decimal (ex.:999.99)",
   "homePhone":"Home phone",
+  "imageSizeWarning": "The image you are trying to send is too big.",
   "implantationPlan":"Site plan",
   "inspectionBatch":"Inspection batch",
   "inspectionByMap":"By map",
