feat(#293) Added pictograms to sketchtool

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,6 +13,7 @@
   "addFireSprinklerButton":"Add a fire sprinkler...",
   "addHazardousMaterialButton":"Add hazardous material...",
   "addLaneButton":"Add a lane...",
+  "addPictogram":"Add a pictogram",
   "addPnapButton":"Add a PNAP...",
   "addGeometricShape":"Add a shape",
   "addThemeButton":"Add a new theme...",
