Feat(#297) Afficher un progress bar pendant le chargement de la cache.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,6 +43,7 @@
   "cartographyLocation":"Cartography positioning",
   "cellular":"Cellular",
   "circle": "Circle",
+  "checkCache": "Check cache...",
   "choose":"Choose...",
   "chooseFireStation":"Choose a fire station",
   "civicNumber":"Civic #",
