Feat(#297) Add better error handling .

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,7 +43,7 @@
   "cartographyLocation":"Cartography positioning",
   "cellular":"Cellular",
   "circle": "Circle",
-  "checkCache": "Check cache...",
+  "checkCache": "Checking cache...",
   "choose":"Choose...",
   "chooseFireStation":"Choose a fire station",
   "civicNumber":"Civic #",
@@ -116,6 +116,8 @@
   },
   "editPicture": "Edit picture",
   "edition":"Edition",
+  "error": "Error",
+  "dataLoadingError": "Can't access the server to load data.  Please try again later.",
   "extension":"Extension",
   "finish":"Finish",
   "fireAlarmPanel":"Alarm panel",
