Feat(#312) Show user that the inspection is completed and ready to transfer.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -39,6 +39,7 @@
   "buildingPnaps":"Building's PNAPS",
   "buildings":"Buildings",
   "cancel":"Cancel",
+  "cantStartBecauseCantDownloadAndApiUnavailable": "This inspection hadn't been downloaded and it was impossible to reach the API to download it, which means you can't start it.",
   "capacity":"Capacity",
   "cartographyLocation":"Cartography positioning",
   "cellular":"Cellular",
@@ -173,6 +174,7 @@
   "inspectionStatusStarted":"Inspection in progress",
   "inspectionStatusTodo":"Pending inspection",
   "inspectionStatusWaitingForApprobation":"Waiting for inspection approval",
+  "inspectionStatusToTransmit": "Inspection to transfer to server",
   "inspectionVisit":"Inspection visit",
   "invalidDecimalValue": "The value must be a valid decimal value (ex.: 9999.99).",
   "lane":"Lane",
@@ -260,6 +262,7 @@
   "searchHolder":"Search...",
   "securityPerimeter":"Security perimeter",
   "sendToBack":"Send to back",
+  "sendToServer": "Transfer to server",
   "serverDownMessage":"SURVI-Prévention server is not responding, a message has been sent to the support, please retry later.",
   "settings":"Settings",
   "siding":"Siding",
