--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -39,6 +39,7 @@
   "buildingPnaps":"PNAPS du bâtiment",
   "buildings":"Bâtiments",
   "cancel":"Annuler",
+  "cantStartBecauseCantDownloadAndApiUnavailable": "Cette inspection n'a pas été téléchargée et il est impossible de rejoindre le serveur pour le faire.  Il est donc impossible de débuter l'inspection.",
   "capacity":"Capacité",
   "cartographyLocation":"Positionnement cartographique",
   "cellular":"Cellulaire",
@@ -172,6 +173,7 @@
   "inspectionStatusStarted":"Inspection en cours",
   "inspectionStatusTodo":"Inspection en attente",
   "inspectionStatusWaitingForApprobation":"Inspection en attente d'approbation",
+  "inspectionStatusToTransmit": "Inspection à transférer au serveur",
   "inspectionVisit":"Visite d'inspection",
   "invalidDecimalValue": "La valeur doit être une valeur décimale valide (ex.: 9999.99).",
   "lane":"Voie",
@@ -259,6 +261,7 @@
   "searchHolder":"Recherche...",
   "securityPerimeter":"Périmètre de sécurité",
   "sendToBack":"Mettre à l'arrière",
+  "sendToServer": "Envoyer au serveur",
   "serverDownMessage":"Le serveur de SURVI-Prévention ne répond pas, un message a été envoyé au service client, veuillez réessayer plus tard.",
   "settings":"Configurations",
   "siding":"Revêtement",
