Feat(#280) Show app version

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -317,5 +317,6 @@
   "warning":"Warning",
   "waterSupplies":"Water supplies",
   "weakened":"Weakened",
-  "yes":"Yes"
+  "yes":"Yes",
+  "version": "Version"
 }
