--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -316,5 +316,6 @@
   "warning":"Avertissement",
   "waterSupplies":"Alimentation en eau",
   "weakened":"Affaibli",
-  "yes":"Oui"
+  "yes":"Oui",
+  "version": "Version"
 }
