Feat(#302)  Allow user to download a full batch.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -41,6 +41,9 @@
   "cancel":"Cancel",
   "cantStartBecauseCantDownloadAndApiUnavailable": "This inspection hadn't been downloaded and it was impossible to reach the API to download it, which means you can't start it.",
   "cantUploadAndCompleteInspection": "An error has occured while trying to complete the inspection. You will have to manually transmit it when you're back online again.",
+  "cantOpenInspection": "You can't open inspection because it hasn't been downloaded and the server can't be reached.",
+  "cantDownloadBatch": "An error has occured while downloading the batch.  Please try again later.",
+  "cantDownloadInspection": "An error has occured while downloading the inspection.  Please try again later.",
   "capacity":"Capacity",
   "cartographyLocation":"Cartography positioning",
   "cellular":"Cellular",
