--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -41,6 +41,9 @@
   "cancel":"Annuler",
   "cantStartBecauseCantDownloadAndApiUnavailable": "Cette inspection n'a pas été téléchargée et il est impossible de rejoindre le serveur pour le faire.  Il est donc impossible de débuter l'inspection.",
   "cantUploadAndCompleteInspection": "Une erreur est survenue dans le processus de complétion de l'inspection.  Vous devrez la transmettre manuellement lorsque vous aurez de nouveau accès à internet.",
+  "cantOpenInspection": "Impossible d'ouvrir cette inspection, car elle n'a pas été téléchargée et le serveur est inaccessible.",
+  "cantDownloadBatch": "Une erreur s'est produite lors du chargement du lot.  Veuillez réeassayer plus tard.",
+  "cantDownloadInspection": "Une erreur s'est produite lors du chargement de l'inspection.  Veuillez réeassayer plus tard.",
   "capacity":"Capacité",
   "cartographyLocation":"Positionnement cartographique",
   "cellular":"Cellulaire",
