Fix(#322) Change available fire hydrant page title.

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,6 +18,7 @@
   "addGeometricShape":"Add a shape",
   "addThemeButton":"Add a new theme...",
   "affectation":"Assignment",
+  "availableFireHydrantList": "Nearest available fire hydrants",
   "approximate":"Approximate",
   "backToBuildingList":"Return to building list",
   "biometric": {
