--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -19,6 +19,7 @@
   "addThemeButton":"Ajouter un nouveau thème...",
   "affectation":"Affectation",
   "approximate":"Approximatif",
+  "availableFireHydrantList": "Bornes disponibles les plus près",
   "backToBuildingList":"Retourner à la liste des bâtiments",
   "biometric": {
     "activate": "Activation de la biométrie",
