feat(#295) Make profile display correctly.

--- a/Ionic4/src/assets/i18n/en.json
+++ b/Ionic4/src/assets/i18n/en.json
@@ -171,7 +171,7 @@
   "inspectionBatch":"Inspection batch",
   "inspectionByMap":"By map",
   "inspectionByList":"By list",
-  "inspectionList":"Inspection list",
+  "inspectionList":"Inspections list",
   "inspectionListSearchText":"Risk level, civic # or lane name",
   "inspectionQuit":"Quit inspection",
   "inspectionStatusApproved":"Inspection approved",
