Feat(#295) Fix missing building's section.

--- a/Ionic4/src/assets/i18n/fr.json
+++ b/Ionic4/src/assets/i18n/fr.json
@@ -209,6 +209,7 @@
   "no":"Non",
   "notes":"Notes",
   "notNow": "Pas maintenant",
+  "notSpecified": "Non spécifié",
   "number":"Numéro",
   "opening":"Ouverture",
   "operator":"Opérateur",
