--- a/Ionic4/src/assets/i18n/en.json
+++ b/Ionic4/src/assets/i18n/en.json
@@ -210,6 +210,7 @@
   "no":"No",
   "notes":"Notes",
   "notNow": "Not now",
+  "notSpecified": "Not specified",
   "number":"Number",
   "opening":"Opening",
   "operator":"Operator",
