Fix(#295) Implantation's plan button were too large (too much margin).

--- a/Ionic4/src/assets/i18n/en.json
+++ b/Ionic4/src/assets/i18n/en.json
@@ -50,7 +50,7 @@
   "cellular":"Cellular",
   "circle": "Circle",
   "checkCache": "Checking cache...",
-  "choose":"Choose...",
+  "choose":"Choose",
   "chooseFireStation":"Choose a fire station",
   "civicNumber":"Civic #",
   "code":"Code",
@@ -206,7 +206,7 @@
   "name":"Name",
   "navigationBack":"Back",
   "navigationSearch":"Search",
-  "new":"New...",
+  "new":"New",
   "no":"No",
   "notes":"Notes",
   "notNow": "Not now",
