--- a/Ionic4/src/assets/i18n/fr.json
+++ b/Ionic4/src/assets/i18n/fr.json
@@ -50,7 +50,7 @@
   "cellular":"Cellulaire",
   "circle": "Cercle",
   "checkCache": "Vérification de la cache...",
-  "choose":"Choisir...",
+  "choose":"Choisir",
   "chooseFireStation":"Choisir une caserne",
   "civicNumber":"# civique",
   "code":"Code",
@@ -205,7 +205,7 @@
   "name":"Nom",
   "navigationBack":"Retour",
   "navigationSearch":"Rechercher",
-  "new":"Nouvelle...",
+  "new":"Nouvelle",
   "no":"Non",
   "notes":"Notes",
   "notNow": "Pas maintenant",
