Fix(#295) Make course's label smaller.

--- a/Ionic4/src/assets/i18n/en.json
+++ b/Ionic4/src/assets/i18n/en.json
@@ -12,7 +12,7 @@
   "addFirePanelAlarmButton":"Add a alarm panel...",
   "addFireSprinklerButton":"Add a fire sprinkler...",
   "addHazardousMaterialButton":"Add hazardous material...",
-  "addLaneButton":"Add a lane...",
+  "addLaneButton":"Add lane",
   "addPictogram":"Add a pictogram",
   "addPnapButton":"Add a PNAP...",
   "addGeometricShape":"Add a shape",
@@ -75,7 +75,7 @@
   "corporateName": "Corporate name",
   "course":"Course",
   "courseDetail":"Course detail",
-  "courseDetailDeleteButton":"Delete the course",
+  "courseDetailDeleteButton":"Delete course",
   "courseDetailDeleteQuestion":"Do you really want to delete this course ?",
   "courseDetailLeaveMessage":"This course contains some validation errors and has not been saved. Do you still want to to previous page?",
   "courseLaneDetail":"Lane detail",
