--- a/Ionic4/src/assets/i18n/fr.json
+++ b/Ionic4/src/assets/i18n/fr.json
@@ -12,7 +12,7 @@
   "addFirePanelAlarmButton":"Ajouter un panneau d'alarme...",
   "addFireSprinklerButton":"Ajouter un gicleur...",
   "addHazardousMaterialButton":"Ajouter une matière dangereuse...",
-  "addLaneButton":"Ajouter une voie...",
+  "addLaneButton":"Ajouter voie",
   "addPictogram":"Ajouter un pictogramme",
   "addPnapButton":"Ajouter un PNAP...",
   "addGeometricShape":"Ajouter une forme",
@@ -75,7 +75,7 @@
   "corporateName": "Raison sociale",
   "course":"Parcours",
   "courseDetail":"Détail du parcours",
-  "courseDetailDeleteButton":"Supprimer le parcours",
+  "courseDetailDeleteButton":"Supprimer parcours",
   "courseDetailDeleteQuestion":"Êtes-vous sûr de vouloir supprimer ce parcours ?",
   "courseDetailLeaveMessage":"Le parcours contient des erreurs de validation et n'a pas été sauvegardé.  Voulez-vous quand même retourner à la page précédente?",
   "courseLaneDetail":"Détails de la voie",
