Feat(#295)  Add missing localization for building's description.

--- a/Ionic4/src/assets/i18n/en.json
+++ b/Ionic4/src/assets/i18n/en.json
@@ -50,6 +50,7 @@
   "cellular":"Cellular",
   "circle": "Circle",
   "checkCache": "Checking cache...",
+  "childBuilding": "Child building",
   "choose":"Choose",
   "chooseFireStation":"Choose a fire station",
   "civicNumber":"Civic #",
@@ -232,6 +233,7 @@
   "particularRisk":"Particular risks",
   "particularRiskFloor":"Floor",
   "password":"Password",
+  "parentBuilding":"Main building",
   "phone":"Phone",
   "photoDeleteQuestion":"Do you really want to delete this photo?",
   "pipingLocation":"Piping localization",
