--- a/Ionic4/src/assets/i18n/fr.json
+++ b/Ionic4/src/assets/i18n/fr.json
@@ -50,6 +50,7 @@
   "cellular":"Cellulaire",
   "circle": "Cercle",
   "checkCache": "Vérification de la cache...",
+  "childBuilding": "Bâtiment enfant",
   "choose":"Choisir",
   "chooseFireStation":"Choisir une caserne",
   "civicNumber":"# civique",
@@ -230,6 +231,7 @@
   "pager":"Téléavertisseur",
   "particularRisk":"Risques particuliers",
   "particularRiskFloor":"Plancher",
+  "parentBuilding":"Bâtiment principal",
   "password":"Mot de passe",
   "phone":"Téléphone",
   "photoDeleteQuestion":"Êtes-vous sûr de vouloir supprimer cette photo ?",
